packages/kotlin/ttrp-frontend/src/test/resources/corpus/ttr-sql/reject/TTRP-SQL-014.ttrp
// expect: TTRP-SQL-014
container c target erp_pg """sql
SELECT id FROM t LIMIT 10
"""
